# pyG2

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
g2/: chart.py  common.py  engine.py  plot.py  scale.py
g2/api/: __init__.py  base.py  chart.py  mark.py
g2/core/templates/: jupyter-lab.jinja  notebook.jinja  plot.jinja
g2/spec/: __init__.py  animate.py  chart.py  chart_for_spec.py  component.py  composition.py  encode.py  interaction.py  mark.py  palette.py  scale.py  theme.py  transform.py  utils.py
g2/spec/coordinate/: __init__.py  coordinate.py  coordinate_transform.py
g2/spec/data/: __init__.py  data.py  data_transform.py
g2/spec/label/: __init__.py  label.py  label_transform.py
g2/templates/: jupyter-lab.jinja  notebook.jinja  plot.jinja
g2/utils/: __init__.py  common.py  plot.py
src/g2/: __init__.py  chart.py
src/g2/api/: chart_for_api.py  mark.py
src/g2/core/: __init__.py  chart.py  plot.py
src/g2/core/templates/: jupyter-lab.jinja  notebook.jinja  plot.jinja
src/g2/spec/: __init__.py  animate.py  mark.py  palette.py  scale.py
src/g2/spec/coordinate/: __init__.py  coordinate.py  coordinate_transform.py
src/g2/spec/data/: __init__.py  data.py  data_transform.py
src/g2/spec/label/: __init__.py  label.py  label_transform.py
src/g2/utils/: common.py
src/g2_examples/: __init__.py
src/g2_examples/api/: __init__.py  chart.py  interval.py
tests/: __init__.py  test_chart.py  test_g2.py  test_g2_dataclass.py  test_interval.py  test_options.py  test_spec.py
tests/test_api/: test_api.py
